# transcriptomics-supbiotech-2023

./: .gitignore  README.md  fastqc.md  pyproject.toml
differential-gene-analysis/: differential-gene-analysis.md  featureCounts-documentation.md  featureCounts_all.txt  metadata.tsv
differential-gene-analysis/deseq2-results/: replicate_1_vs_2_results.txt  replicate_1_vs_3_results.txt  replicate_2_vs_3_results.txt  time_0_vs_10_results.txt  time_0_vs_25_results.txt  time_0_vs_5_results.txt  time_10_vs_25_results.txt  time_5_vs_10_results.txt  time_5_vs_25_results.txt
fastq-screen/: fastq-screen-documentation.md  fastq_screen.conf
fastqc/: fastqc-documentation.md  fastqc-results-summary.md
fastqc/test-results/fastqc/: Bacillus_infection_T10_R1_fastqc.html  Bacillus_infection_T10_R2_fastqc.html
test/results/fastq-screen/: Bacillus_infection_T0_R1_screen.html  Bacillus_infection_T0_R1_screen.txt  Bacillus_infection_T0_R2_screen.html  Bacillus_infection_T0_R2_screen.txt  Bacillus_infection_T10_R1_screen.html  Bacillus_infection_T10_R1_screen.txt  Bacillus_infection_T10_R2_screen.html  Bacillus_infection_T10_R2_screen.txt
test/results/fastqc/: Bacillus_infection_T0_R1_fastqc.html  Bacillus_infection_T0_R2_fastqc.html
test/results/trimming-adaptors/fastq-screen/: Bacillus_infection_T0_R1_trimmed_screen.html  (+7 more)
tools/fastq-screen/: fastq_screen.conf
tools/fastqc/: fastqc-documentation.md  fastqc-results-summary.md
tools/sequence-alignment/bowtie2/: bowtie2-test-execution.md
tools/sequence-alignment/cutadapt/: cutadapt-documentation.md  cutadapt-test-execution.md
(+23 files in other folders)
